po: update po/de_DE/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -13,6 +13,7 @@
 # MichaSeidler <info@euroconsults.eu>, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2015
+# Moira Brülisauer <moosline@savvy.ch>, 2016
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
@@ -26,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 09:52+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-03-04 14:04+0000\n"
+"Last-Translator: Moira Brülisauer <moosline@savvy.ch>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -804,7 +805,7 @@ msgstr "Erfolgreiche Zusendungen"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 msgid "Bounces"
-msgstr ""
+msgstr "Bounces"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Replies"
@@ -1118,7 +1119,7 @@ msgstr "Antworten von Empfängern wurden an eine von CiviMail spezifische Adress
 msgid ""
 "If a recipient replies to this mailing, forward the reply to the FROM Email "
 "address specified for the mailing."
-msgstr ""
+msgstr "Wenn ein Empfänger auf dieses Mailing antwortet, wird die Antwort an die Adresse die im VON-Feld angegeben ist weitergeleitet. "
 
 #: templates/CRM/Mailing/Form/Settings.tpl
 msgid ""
@@ -1955,7 +1956,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid "Track the number of times recipients click each link in this mailing."
-msgstr ""
+msgstr "Verfolgen Sie die Anzahl Klicks der Empfänger auf jeden Link in diesem Mailing."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -1966,7 +1967,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Test.hlp
 msgid "Verify the content and formatting."
-msgstr ""
+msgstr "Überprüfe den Inhalt und die Formatierung. "
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
