--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-03 13:29+0000\n"
+"PO-Revision-Date: 2016-03-06 23:58+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -26381,7 +26381,7 @@ msgstr "Het is niet de bedoeling om deze sjablonen te registreren."
 
 #: CRM/Utils/VersionCheck.php
 msgid "This version of CiviCRM requires a security update."
-msgstr "Er is een veiligheidsupdate nodig voor deze versie van CiviCRM."
+msgstr "Er is een beveiligingsupdate nodig voor deze versie van CiviCRM."
 
 #: CRM/Utils/VersionCheck.php
 msgid "Read advisory"
@@ -26705,7 +26705,7 @@ msgstr "De controle op bestaande overeenkomende contacten wordt in alle gevallen
 
 #: templates/CRM/common/footer.tpl
 msgid "Security update required."
-msgstr "Veiligheidsupdate verplicht."
+msgstr "Beveiligingsupdate noodzakelijk."
 
 #: templates/CRM/common/success.tpl
 msgid ""
