--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -16,7 +16,7 @@
 # MichaSeidler <info@euroconsults.eu>, 2011, 2012
 # Joan Nguyen <doannt2909@gmail.com>, 2013
 # Jo <jo@caj-augsburg.de>, 2011-2012
-# Martin Peth <peth@systopia.de>, 2014-2015
+# Martin Peth <peth@systopia.de>, 2014-2016
 # MichaSeidler <info@euroconsults.eu>, 2011
 # nautilusx, 2016
 # Onsemeliot <onsemeliot@riseup.net>, 2014
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:10+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-03-07 16:06+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1145,7 +1145,7 @@ msgstr "E-Mail-Versandeinstellungen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Headers, Footers, and Automated Messages"
-msgstr "Kopfzeilen, Fußzeilen und automatische Nachrichten"
+msgstr "Kopfbereiche, Fußbereiche und automatische Nachrichten"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
