po: update po/fr_FR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -13,13 +13,13 @@
 # Seb35 <seb35wikipedia@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
-# Xynn <xynn.anhnguyen@gmail.com>, 2015
+# Xynn <xynn.anhnguyen@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-16 22:43+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-03-07 20:42+0000\n"
+"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2249,7 +2249,7 @@ msgstr ""
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment From"
-msgstr ""
+msgstr "Paiement de"
 
 #: CRM/Member/Form/Membership.php
 msgid "Please Select a Soft Credit Type"
@@ -2438,11 +2438,11 @@ msgstr "Voir les adhésions"
 
 #: CRM/Member/Info.php
 msgid "edit memberships"
-msgstr ""
+msgstr "éditer les adhésions"
 
 #: CRM/Member/Info.php
 msgid "Create and update memberships"
-msgstr ""
+msgstr "Créer et modifier les adhésions"
 
 #: CRM/Member/Info.php
 msgid "delete in CiviMember"
