--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -17,13 +17,13 @@
 # Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Virginie Ganivet <virginie@cividesk.com>, 2015
-# Xynn <xynn.anhnguyen@gmail.com>, 2015
+# Xynn <xynn.anhnguyen@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-14 21:41+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-03-07 20:44+0000\n"
+"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4839,7 +4839,7 @@ msgstr "Détails du remboursement"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "The date this payment was received."
-msgstr ""
+msgstr "Date à laquelle le paiement a été reçu."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Automatically email a receipt to %1?"
@@ -4897,7 +4897,7 @@ msgstr "Cette contribution périodique sera traitée automatiquement tous les %1
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Total amount of this contribution."
-msgstr ""
+msgstr "Somme totale des contributions."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
