--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -12,13 +12,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
-# Xynn <xynn.anhnguyen@gmail.com>, 2015
+# Xynn <xynn.anhnguyen@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-03-03 07:25+0000\n"
-"Last-Translator: mgregoire <mgregoire@mgregoire.net>\n"
+"PO-Revision-Date: 2016-03-07 20:43+0000\n"
+"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2355,11 +2355,11 @@ msgstr "Lien pour effacer l'événement"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_website_type.inc
 msgid "Website type"
-msgstr ""
+msgstr "Type de site"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_state.inc
 msgid "State province"
-msgstr ""
+msgstr "Région"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to View Relationship A-B"
@@ -2445,7 +2445,7 @@ msgstr "Lien vers un noeud Drupal. L'identifiant du contact sera ajouté au bout
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_group_title.inc
 msgid "Group Name"
-msgstr ""
+msgstr "Nom du groupe"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_contact_link.inc
 msgid "Link this field to its CiviCRM Contact"
@@ -2461,7 +2461,7 @@ msgstr "Recherche un noeud et utilise l'auteur du noeud"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_activity.inc
 msgid "Activity type"
-msgstr ""
+msgstr "Type d'activité"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Contacts"
@@ -2845,15 +2845,15 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Message Subject"
-msgstr ""
+msgstr "Sujet du message"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Enter subject for the email"
-msgstr ""
+msgstr "Entrer le sujet de l'e-mail"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Select the group"
-msgstr ""
+msgstr "Sélectionner le groupe"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be added to selected group."
@@ -2861,7 +2861,7 @@ msgstr "Le contact va être ajouté au groupe sélectionné."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be removed from selected group."
-msgstr ""
+msgstr "Le contact va être retiré du groupe sélectionné."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact"
