--- a/po/it_IT/countries.po
+++ b/po/it_IT/countries.po
@@ -7,12 +7,13 @@
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Riccardo <ricma40@gmail.com>, 2013
+# vodkina <mnemosyne@logioshermes.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-07 14:51+0000\n"
+"Last-Translator: vodkina <mnemosyne@logioshermes.org>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,8 +1043,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint Barthélemy (Antille francesi)"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (Parte Francese)"
