--- a/po/it_IT/case.po
+++ b/po/it_IT/case.po
@@ -12,12 +12,13 @@
 # Luca Marzo <luca@jeckodevelopment.it>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
+# vodkina <mnemosyne@logioshermes.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-07 14:57+0000\n"
+"Last-Translator: vodkina <mnemosyne@logioshermes.org>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -217,7 +218,7 @@ msgstr "Resetta la Data di Inizio del Caso"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case type changed from %1 to %2"
-msgstr ""
+msgstr "Il tipo di caso è cambiato da %1 a %2"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case Type changed successfully."
@@ -441,7 +442,7 @@ msgstr "Non sei autorizzato ad accedere a tutti i Casi e le Attività"
 
 #: CRM/Case/Page/Tab.php
 msgid "Are you sure you want to delete this case?"
-msgstr ""
+msgstr "Sei certo di voler cancellare questo caso?"
 
 #: CRM/Case/Page/Tab.php CRM/Case/Selector/Search.php
 #: templates/CRM/Case/Form/Case.tpl
@@ -1028,7 +1029,7 @@ msgstr "Non è possibile "
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type ID"
-msgstr ""
+msgstr "ID Tipo di caso"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Name"
@@ -1036,19 +1037,19 @@ msgstr "Tipo di caso"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Title"
-msgstr ""
+msgstr "Titolo del tipo di caso"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Description"
-msgstr ""
+msgstr "Descrizione del tipo di caso"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Active"
-msgstr ""
+msgstr "Il tipo di caso è attivo"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Reserved"
-msgstr ""
+msgstr "Il tipo di caso è riservato"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Weight"
@@ -1056,7 +1057,7 @@ msgstr ""
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Definition"
-msgstr ""
+msgstr "Definizione del tipo di caso"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/LinkCases.php
@@ -1091,11 +1092,11 @@ msgstr "Prego selezionare un contatto differente."
 
 #: CRM/Case/Form/Report.php
 msgid "All Activities"
-msgstr ""
+msgstr "Tutte le attività"
 
 #: CRM/Case/Form/Report.php
 msgid "Exclude Completed Activities"
-msgstr ""
+msgstr "Escludi le attività completate"
 
 #: CRM/Case/Page/AJAX.php
 msgid "closed"
@@ -1103,7 +1104,7 @@ msgstr "chiuso"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Housing Support"
-msgstr ""
+msgstr "Supporto abitativo"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Help homeless individuals obtain temporary and long-term housing"
@@ -1123,19 +1124,19 @@ msgstr "Valutazione medica"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Mental health evaluation"
-msgstr ""
+msgstr "Valutazione di salute mentale"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Secure temporary housing"
-msgstr ""
+msgstr "Stabilizzazione del reddito e dei benfici"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Income and benefits stabilization"
-msgstr ""
+msgstr "Stabilizzazione del reddito e dei benfici"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Long-term housing plan"
-msgstr ""
+msgstr "Piano abitativo a lungo termine"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "ADC referral"
@@ -1223,7 +1224,7 @@ msgstr ""
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1Salvato"
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
@@ -1251,23 +1252,23 @@ msgstr[1] ""
 
 #: CRM/Case/Info.php
 msgid "delete in CiviCase"
-msgstr ""
+msgstr "cancella in CiviCase"
 
 #: CRM/Case/Info.php
 msgid "administer CiviCase"
-msgstr ""
+msgstr "amministra CiviCase"
 
 #: CRM/Case/Info.php
 msgid "access my cases and activities"
-msgstr ""
+msgstr "accedi ai miei casi ed attività"
 
 #: CRM/Case/Info.php
 msgid "access all cases and activities"
-msgstr ""
+msgstr "accedi tutti i casi ed attività"
 
 #: CRM/Case/Info.php
 msgid "add cases"
-msgstr ""
+msgstr "aggiungi casi"
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 #: xml/templates/message_templates/case_activity_html.tpl
