--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -26,7 +26,7 @@
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
-# Philippe SAMPONT <PhilippeS@cncd.be>, 2015
+# Philippe SAMPONT <PhilippeS@cncd.be>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # SR71 <ben.alard@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011
@@ -41,8 +41,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-07 20:42+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-03-08 15:15+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6053,19 +6053,19 @@ msgstr "Regex"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Is Empty"
-msgstr "Is Empty"
+msgstr "Est vide"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Not Empty"
-msgstr "Not Empty"
+msgstr "Non vide"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Is Null"
-msgstr "Is Null"
+msgstr "est Null"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Not Null"
-msgstr "Not Null"
+msgstr "non Null"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Another search field"
