po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,7 +47,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 16:24+0000\n"
+"PO-Revision-Date: 2016-03-09 16:42+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -4971,7 +4971,7 @@ msgstr "Regel zur Duplikaterkennung"
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Lookup mapping info during import?"
-msgstr "Landkarteninformationen während des Imports suchen?"
+msgstr "Beim Import Geodaten abrufen?"
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Import Field Separator"
@@ -14961,7 +14961,7 @@ msgstr "Wählen Sie das Dateiformat, das in den Datenfeldern verwendet wird, die
 msgid ""
 "This option is not recommended for large imports. Use the command-line "
 "geocoding script instead."
-msgstr "Diese Option wird nicht empfohlen für den Import einer grossen Datenmenge.  Verwende stattdessen das Befehlszeilen geocoding Skript."
+msgstr "Nicht empfohlen beim Import großer Datenmengen. Verwenden Sie stattdessen den Cronjob für Geocoding"
 
 #: templates/CRM/Contact/Import/Form/MapTable.tpl
 msgid "Column Names"
