--- a/po/gl_ES/drupal-civicrm.po
+++ b/po/gl_ES/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
 "PO-Revision-Date: 2011-03-28 14:18+0000\n"
-"Language-Team: Galician (Spain) (http://www.transifex.com/projects/p/civicrm/language/gl_ES/)\n"
+"Language-Team: Galician (Spain) (http://www.transifex.com/civicrm/civicrm/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -297,7 +297,7 @@ msgstr ""
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
 msgid "Group"
-msgstr ""
+msgstr "Grupo"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
@@ -2854,7 +2854,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact"
-msgstr ""
+msgstr "Contacto"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing"
