--- a/po/gl_ES/menu.po
+++ b/po/gl_ES/menu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-03-10 17:27+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Galician (Spain) (http://www.transifex.com/civicrm/civicrm/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -898,7 +898,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Import"
-msgstr ""
+msgstr "Importar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1304,7 +1304,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Search"
-msgstr ""
+msgstr "Buscar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1484,7 +1484,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Administer"
-msgstr ""
+msgstr "Administrar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
