--- a/po/pt_BR/menu.po
+++ b/po/pt_BR/menu.po
@@ -10,14 +10,15 @@
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011, 2012
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Ricardo Sá <ricardofgsa@gmail.com>, 2016
 # Samir Young Jun Zampiva <samireu@gmail.com>, 2013
 # Wesley Ferreira <contato@wesleyferreira.adv.br>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 18:14+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-10 17:35+0000\n"
+"Last-Translator: Ricardo Sá <ricardofgsa@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2159,37 +2160,37 @@ msgstr "Gerenciar Testes A/B"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Suporte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Iniciar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Colocar uma questão"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Obter ajuda de especialista"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "Sobre CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Registar o seu site"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Junte-se à CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
