--- a/po/gl_ES/common-base.po
+++ b/po/gl_ES/common-base.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Antón Méixome <meixome@certima.net>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-10 17:27+0000\n"
+"Last-Translator: Antón Méixome <meixome@certima.net>\n"
 "Language-Team: Galician (Spain) (http://www.transifex.com/civicrm/civicrm/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,12 +21,12 @@ msgstr ""
 #: CRM/Contact/Form/Task/Map.php CRM/Core/DAO/Website.php
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Contact"
-msgstr ""
+msgstr "Contacto"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/Form/EntityRole.php
 #: templates/CRM/ACL/Page/EntityRole.tpl xml/templates/civicrm_data.tpl
 msgid "ACL Role"
-msgstr ""
+msgstr "Rol ACL"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/BAO/EntityRole.php CRM/ACL/Form/ACL.php
 #: CRM/ACL/Page/ACL.php CRM/Contact/Form/Search/Custom/PostalMailing.php
@@ -36,19 +37,19 @@ msgstr ""
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Group"
-msgstr ""
+msgstr "Grupo"
 
 #: CRM/ACL/BAO/ACL.php
 msgid "Contact Group"
-msgstr ""
+msgstr "Grupo de contactos"
 
 #: CRM/ACL/BAO/ACL.php
 msgid "Administer"
-msgstr ""
+msgstr "Administrar"
 
 #: CRM/ACL/BAO/ACL.php
 msgid "Import"
-msgstr ""
+msgstr "Importar"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/DAO/ACL.php CRM/Activity/Selector/Activity.php
 #: CRM/Contact/BAO/Contact/Utils.php CRM/Contact/DAO/ACLContactCache.php
@@ -60,7 +61,7 @@ msgstr ""
 #: templates/CRM/Contact/Form/Search/Custom/FullText.tpl
 #: templates/CRM/Contact/Page/View/Group.tpl
 msgid "View"
-msgstr ""
+msgstr "Ver"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/DAO/ACL.php CRM/ACL/Page/ACL.php
 #: CRM/ACL/Page/ACLBasic.php CRM/ACL/Page/EntityRole.php
@@ -77,12 +78,12 @@ msgstr ""
 #: templates/CRM/Contact/Page/View/CustomDataFieldView.tpl
 #: templates/CRM/Contact/Page/View/Summary.tpl
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/DAO/ACL.php CRM/Contact/DAO/ACLContactCache.php
 #: CRM/UF/Page/Group.php
 msgid "Create"
-msgstr ""
+msgstr "Crear"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/DAO/ACL.php CRM/ACL/Page/ACL.php
 #: CRM/ACL/Page/ACLBasic.php CRM/ACL/Page/EntityRole.php
@@ -104,7 +105,7 @@ msgstr ""
 #: templates/CRM/Contact/Page/View/Summary.tpl
 #: templates/CRM/Custom/Page/CustomDataView.tpl
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/DAO/ACL.php CRM/Activity/Form/Search.php
 #: CRM/Contact/Form/Relationship.php
@@ -127,13 +128,13 @@ msgstr ""
 #: CRM/Contact/Page/SavedSearch.php CRM/Group/Form/Search.php
 #: CRM/Profile/Form/Search.php templates/CRM/Contact/Form/Search/Basic.hlp
 msgid "Search"
-msgstr ""
+msgstr "Buscar"
 
 #: CRM/ACL/BAO/ACL.php CRM/ACL/DAO/ACL.php CRM/Contact/DAO/ACLContactCache.php
 #: CRM/Contact/Form/Search/Criteria.php CRM/Utils/PagerAToZ.php
 #: templates/CRM/Block/FullTextSearch.tpl
 msgid "All"
-msgstr ""
+msgstr "Todos"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
