--- a/po/mk/menu.po
+++ b/po/mk/menu.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Dimce Grozdanoski <dimce.grozdanoski@gmail.com>, 2011
+# Jordan Jovanov <jovanovjoce@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-10 09:20+0000\n"
+"Last-Translator: Jordan Jovanov <jovanovjoce@gmail.com>\n"
 "Language-Team: Macedonian (http://www.transifex.com/civicrm/civicrm/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,12 +20,12 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Campaign Dashboard"
-msgstr ""
+msgstr "Работна површина за кампања"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Campaign"
-msgstr ""
+msgstr "Нова Кампања"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
