po: update po/cs_CZ/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cs_CZ/common-base.po
+++ b/po/cs_CZ/common-base.po
@@ -11,14 +11,14 @@
 # martind, 2015
 # Martin Máša <my.melody.production@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Tass <vanatomas@fastmail.net>, 2014
+# Tass <vanatomas@fastmail.net>, 2014,2016
 # Tass <vanatomas@fastmail.net>, 2011-2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-11 20:56+0000\n"
+"Last-Translator: Tass <vanatomas@fastmail.net>\n"
 "Language-Team: Czech (http://www.transifex.com/civicrm/civicrm/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17164,7 +17164,7 @@ msgstr "Celkem k platbě"
 
 #: templates/CRM/Price/Form/Calculate.tpl
 msgid "for this participant"
-msgstr ""
+msgstr "za tohoto účastníka"
 
 #: templates/CRM/Price/Form/DeleteField.tpl
 msgid ""
