po: update po/cs_CZ/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cs_CZ/event.po
+++ b/po/cs_CZ/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-04 23:02+0000\n"
+"PO-Revision-Date: 2016-03-11 20:58+0000\n"
 "Last-Translator: Tass <vanatomas@fastmail.net>\n"
 "Language-Team: Czech (http://www.transifex.com/civicrm/civicrm/language/cs/)\n"
 "MIME-Version: 1.0\n"
@@ -3501,7 +3501,7 @@ msgstr ""
 
 #: CRM/Event/Form/ParticipantFeeSelection.php
 msgid "The fee selection has been changed for this participant"
-msgstr ""
+msgstr "Výběr poplatku byl změněn pro tohoto účastníka."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "Register >>"
@@ -3770,7 +3770,7 @@ msgstr ""
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "Skip Participant"
-msgstr ""
+msgstr "Přeskočit tohoto účastníka"
 
 #: CRM/Event/Form/Registration/Confirm.php
 msgid ""
