po: update po/nl_NL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:46+0000\n"
+"PO-Revision-Date: 2016-03-11 17:09+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -554,7 +554,7 @@ msgstr "Adresseringsopmaak"
 
 msgctxt "menu"
 msgid "Languages, Currency, Location"
-msgstr "Taal, Valuta, Locatie"
+msgstr "Taal, valuta, locatie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1548,7 +1548,7 @@ msgstr "Talen, valuta, locaties"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Language Options"
-msgstr "Opties voorkeurstaal"
+msgstr "Voorkeurstalen instellen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
