--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:50+0000\n"
+"PO-Revision-Date: 2016-03-11 13:41+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1663,7 +1663,7 @@ msgstr "Weet u zeker dat u de geselecteerde lidmaatschappen wilt verwijderen? De
 
 #: templates/CRM/Member/Form/Task/PDFLetter.tpl
 msgid "Membership Letter (PDF)"
-msgstr "Lidmaatschap brieven (PDF)"
+msgstr "Brieven voor lidmaatschappen (PDF)"
 
 #: templates/CRM/Member/Form/Task.tpl
 msgid "Number of selected members: %1"
