--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:53+0000\n"
+"PO-Revision-Date: 2016-03-11 13:45+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1512,7 +1512,7 @@ msgstr "Afdruk voorvertonen"
 
 #: CRM/Report/Form.php
 msgid "Preview PDF"
-msgstr "Voorvertonen PDF"
+msgstr "Afdrukvoorbeeld PDF"
 
 #: CRM/Report/Form.php
 msgid "Preview CSV"
