po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 15:54+0000\n"
+"PO-Revision-Date: 2016-03-11 13:47+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4768,7 +4768,7 @@ msgstr "Scheiding (gegroepeerde bijdragen)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Generate PDFs for printing (only)"
-msgstr "Aanmaken PDF om af te drukken (alleen)"
+msgstr "PDF-brieven afdrukken"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid ""
@@ -5190,7 +5190,7 @@ msgstr "Afdrukken Bijdrage Factuur"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "PDF Invoice"
-msgstr "PDF Factuur"
+msgstr "PDF-factuur"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "From Email Address is required"
