po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-06 23:58+0000\n"
+"PO-Revision-Date: 2016-03-11 14:52+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1426,7 +1426,7 @@ msgstr "E-mail naar een contact"
 
 #: CRM/Activity/Page/Tab.php
 msgid "Create PDF Letter"
-msgstr "Brief in PDF-opmaak maken"
+msgstr "PDF-brief maken"
 
 #: CRM/Activity/Page/Tab.php
 msgid "Contact Activities"
@@ -4670,11 +4670,11 @@ msgstr "Moet het nieuwe template altijd de geselecteerde pagina-opmaak gebruiken
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Make PDF Letter"
-msgstr "Brief in PDF-opmaak maken"
+msgstr "PDF-brief maken"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Make PDF Letters"
-msgstr "Maak brieven in PDF formaat"
+msgstr "PDF-brieven maken"
 
 #: CRM/Contact/Form/Task/PickProfile.php
 msgid ""
@@ -5499,7 +5499,7 @@ msgstr "Bewerk met een profiel"
 
 #: CRM/Contact/Task.php
 msgid "Print PDF Letter for Contacts"
-msgstr "PDF brief afdrukken voor Contacten"
+msgstr "PDF-brief afdrukken voor contacten"
 
 #: CRM/Contact/Task.php
 msgid "Unhold Emails"
@@ -19437,11 +19437,11 @@ msgstr "Verwijder dossierrol"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Print PDF Letter"
-msgstr "Print PDF document"
+msgstr "PDF-brief afdrukken"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Print PDF Letter."
-msgstr "Print PDF document."
+msgstr "PDF-brief afdrukken."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Merge Case"
@@ -23457,11 +23457,11 @@ msgstr "Vast (relatief pad naar PDF dat u als achtergrond wilt gebruiken)"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Make PDF"
-msgstr "PDF maken"
+msgstr "PDF-brief maken"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Make PDFs"
-msgstr "PDF's maken"
+msgstr "PDF-brieven maken"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "External ID conflicts with record %1"
@@ -25238,7 +25238,7 @@ msgstr "Toon alle resultaten van bestanden"
 #: templates/CRM/Contact/Form/Search/ResultTasks.tpl
 #: templates/CRM/common/searchResultTasks.tpl
 msgid "%1 Selected records only"
-msgstr "%1 alleen geselecteerde records"
+msgstr "Alleen %1 geselecteerde records"
 
 #: templates/CRM/Contact/Form/Task/SMS.tpl
 msgid ""
