--- a/po/ro_RO/install.po
+++ b/po/ro_RO/install.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Aurelia Bejenari <aurelia.bejenari@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-13 13:30-0400\n"
-"PO-Revision-Date: 2015-03-13 21:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Romanian (http://www.transifex.com/projects/p/civicrm/language/ro/)\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-03-11 20:42+0000\n"
+"Last-Translator: Aurelia Bejenari <aurelia.bejenari@gmail.com>\n"
+"Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -28,7 +29,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "Ups! CiviCRM este deja instalat"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
@@ -49,7 +50,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Ups! Versiune CiviCRM incorectă"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
