--- a/po/ro_RO/campaign.po
+++ b/po/ro_RO/campaign.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-03-12 08:16+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -217,7 +217,7 @@ msgstr ""
 #: CRM/Campaign/Form/Petition.php CRM/Campaign/Form/Survey/Delete.php
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Delete Survey"
-msgstr ""
+msgstr "Șterge Sondaj"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Petition"
@@ -309,7 +309,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Configure Survey"
-msgstr ""
+msgstr "Configurarează Sondaj"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Survey Dashboard"
@@ -609,7 +609,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Petitions"
-msgstr ""
+msgstr "Petiții"
 
 #: CRM/Campaign/Selector/Search.php
 msgid "Respondents"
