po: update po/ro_RO/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ro_RO/admin.po
+++ b/po/ro_RO/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-03-12 08:22+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -1759,11 +1759,11 @@ msgstr "Localizare"
 
 #: CRM/Admin/Page/Admin.php
 msgid "Users and Permissions"
-msgstr ""
+msgstr "Utilizatori și Permisiuni"
 
 #: CRM/Admin/Page/Admin.php
 msgid "System Settings"
-msgstr ""
+msgstr "Setări Sistem"
 
 #: CRM/Admin/Page/ConfigTaskList.php
 msgid "Configuration Checklist"
@@ -4346,7 +4346,7 @@ msgstr ""
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Payment Processors"
-msgstr ""
+msgstr "Procesori de Plăți"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/Setting.tpl
@@ -6280,7 +6280,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Register your site"
-msgstr ""
+msgstr "Înregistrează-ți site-ul"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid ""
