--- a/po/ro_RO/common-components.po
+++ b/po/ro_RO/common-components.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-03-12 08:24+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -2076,7 +2076,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "View Payment"
-msgstr ""
+msgstr "Vizualizare Plată"
 
 #: CRM/Contribute/Form/AdditionalPayment.php CRM/Event/Form/EventFees.php
 #: CRM/Event/Form/ParticipantFeeSelection.php
