--- a/po/ro_RO/countries.po
+++ b/po/ro_RO/countries.po
@@ -5,12 +5,13 @@
 # Translators:
 # pitzy2014 <adp2005rocks@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# tiberiu manolache <tiberiu.manolache@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-12 08:12+0000\n"
+"Last-Translator: tiberiu manolache <tiberiu.manolache@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +41,7 @@ msgstr "Africa de Vest, Est, Centrală și de Sud"
 
 msgctxt "country"
 msgid "unassigned"
-msgstr ""
+msgstr "neatribuit"
 
 msgctxt "country"
 msgid "Afghanistan"
