--- a/po/ro_RO/case.po
+++ b/po/ro_RO/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-03-12 08:15+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -442,7 +442,7 @@ msgstr ""
 
 #: CRM/Case/Selector/Search.php
 msgid "Assign to Another Client"
-msgstr ""
+msgstr "Atribuie Altui Client"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/Task/Print.tpl
 #: templates/CRM/Case/Page/DashboardSelector.tpl
