--- a/po/ro_RO/menu.po
+++ b/po/ro_RO/menu.po
@@ -5,12 +5,13 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sergiu <vandenboosch@mail.ru>, 2015
+# tiberiu manolache <tiberiu.manolache@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-12 08:25+0000\n"
+"Last-Translator: tiberiu manolache <tiberiu.manolache@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -103,11 +104,11 @@ msgstr "Vă mulțumim"
 
 msgctxt "menu"
 msgid "Configure Survey"
-msgstr ""
+msgstr "Configurarează Sondaj"
 
 msgctxt "menu"
 msgid "Delete Survey"
-msgstr ""
+msgstr "Șterge Sondaj"
 
 msgctxt "menu"
 msgid "CiviCase Dashboard"
@@ -144,7 +145,7 @@ msgstr "Vizualizare activităţi"
 
 msgctxt "menu"
 msgid "Assign to Another Client"
-msgstr ""
+msgstr "Atribuie Altui Client"
 
 msgctxt "menu"
 msgid "Build Activity To Case"
@@ -1376,7 +1377,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Events"
-msgstr ""
+msgstr "Evenimente"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1431,7 +1432,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaigns"
-msgstr ""
+msgstr "Campanii"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1441,7 +1442,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Petitions"
-msgstr ""
+msgstr "Petiții"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1461,12 +1462,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Cases"
-msgstr ""
+msgstr "Cazuri"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Case"
-msgstr ""
+msgstr "Caz Nou"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1486,12 +1487,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Administer"
-msgstr ""
+msgstr "Administrează"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Administration Console"
-msgstr ""
+msgstr "Consolă Administrație"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1501,7 +1502,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Custom Fields"
-msgstr ""
+msgstr "Câmpuri Personalizate"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1541,7 +1542,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Users and Permissions"
-msgstr ""
+msgstr "Utilizatori și Permisiuni"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1551,7 +1552,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Settings"
-msgstr ""
+msgstr "Setări Sistem"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1561,12 +1562,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Processors"
-msgstr ""
+msgstr "Procesori de Plăți"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Safe File Extensions"
-msgstr ""
+msgstr "Extensii Sigure Fișiere"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1576,7 +1577,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "SMS Providers"
-msgstr ""
+msgstr "Furnizori SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1651,7 +1652,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About"
-msgstr ""
+msgstr "Despre"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1773,7 +1774,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contributions by Organization"
-msgstr ""
+msgstr "Contribuții după Organizație"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1785,7 +1786,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contributions by Household"
-msgstr ""
+msgstr "Contribuții  după Gospodării"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1797,7 +1798,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Top Donors"
-msgstr ""
+msgstr "Top Donatori"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2039,7 +2040,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Survey Details"
-msgstr ""
+msgstr "Detalii Sondaj"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2053,7 +2054,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "New Payment"
-msgstr ""
+msgstr "Plată Nouă"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2062,7 +2063,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "View Payment"
-msgstr ""
+msgstr "Vizualizare Plată"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2085,7 +2086,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Developer"
-msgstr ""
+msgstr "Dezvoltator"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2125,11 +2126,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "CiviCRM API"
-msgstr ""
+msgstr "API CiviCRM"
 
 msgctxt "menu"
 msgid "Confirm dates"
-msgstr ""
+msgstr "Confirmă date"
 
 msgctxt "menu"
 msgid "Repeat Event"
@@ -2152,39 +2153,39 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Suport"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Începe"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Pune o întrebare"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Primește ajutor de specialitate"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "Despre CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Înregistrează-ți site-ul"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Alătură-te Civi CRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides information about the status of recurring contributions"
-msgstr ""
+msgstr "Oferă informații despre starea contribuțiilor recurente"
