po: update po/ro_RO/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ro_RO/common-base.po
+++ b/po/ro_RO/common-base.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-03-12 08:21+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -2128,7 +2128,7 @@ msgstr "Garantate/ Obligate/ Asumate"
 #: templates/CRM/Contact/Form/Search/Custom/FullText.tpl
 #: xml/templates/civicrm_data.tpl
 msgid "Cases"
-msgstr ""
+msgstr "Cazuri"
 
 #: CRM/Contact/BAO/Query.php CRM/Core/SelectValues.php CRM/Dedupe/Merger.php
 #: xml/templates/civicrm_data.tpl
@@ -8586,7 +8586,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Campaigns"
-msgstr ""
+msgstr "Campanii"
 
 #: CRM/Core/SelectValues.php
 msgid "Standalone Form or Directory"
@@ -16617,7 +16617,7 @@ msgstr ""
 
 #: templates/CRM/Dashlet/Page/CaseDashboard.tpl
 msgid "New Case"
-msgstr ""
+msgstr "Caz Nou"
 
 #: templates/CRM/Dashlet/Page/CaseDashboard.tpl
 msgid "Show ALL Cases with Upcoming Activities"
@@ -26841,7 +26841,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Provides information about the status of recurring contributions"
-msgstr ""
+msgstr "Oferă informații despre starea contribuțiilor recurente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Sales Tax Account is"
