po: update po/pt_BR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -5,7 +5,7 @@
 # Translators:
 # anavazquez <anaavazquez@hotmail.com>, 2012
 # anavazquez <anaavazquez@hotmail.com>, 2012
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014-2015
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014-2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013-2014
 #   <diego.viegas@dotproject.com.br>, 2011-2012
 # drero <dreroips@yahoo.com.br>, 2012
@@ -31,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-13 14:51+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3340,7 +3340,7 @@ msgstr "Informações do Contato"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "You do not have permission to edit relationships for this contact."
-msgstr ""
+msgstr "Você não tem a permissão para editar os relacionamentos deste contato."
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Relationships for"
