--- a/po/fi_FI/menu.po
+++ b/po/fi_FI/menu.po
@@ -5,6 +5,7 @@
 # Translators:
 # Antti Kekki <antti.kekki@gmail.com>, 2013
 # Antti Kekki <antti.kekki@gmail.com>, 2013
+# Tukea <nokoa@live.fi>, 2016
 # Jaakko Helleranta <jaakko@helleranta.com>, 2016
 # Joona Soininen <joonasoininen@gmail.com>, 2012
 # Otto Kekäläinen <otto@seravo.fi>, 2013
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-16 18:01+0000\n"
-"Last-Translator: Jaakko Helleranta <jaakko@helleranta.com>\n"
+"PO-Revision-Date: 2016-03-14 06:08+0000\n"
+"Last-Translator: Tukea <nokoa@live.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -257,7 +258,7 @@ msgstr "Hallitse etuja"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Types"
-msgstr ""
+msgstr "Taloudelliset tyypit"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
