--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-26 22:00+0000\n"
+"PO-Revision-Date: 2016-03-14 10:29+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -18701,7 +18701,7 @@ msgstr "CiviCRM är öppen programvara och tillgänglig under <a href='%1'>GNU A
 
 #: templates/CRM/common/footer.tpl
 msgid "Download CiviCRM."
-msgstr ""
+msgstr "Ladda ner CiviCRM"
 
 #: templates/CRM/common/footer.tpl
 msgid "View issues and report bugs."
