po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-26 23:37+0000\n"
+"PO-Revision-Date: 2016-03-14 10:27+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -6793,7 +6793,7 @@ msgid ""
 "fields types. Setting the default date format for the entire site is a "
 "Localisation setting. See <a href=\"%1\">Administer > Localization > Date "
 "Formats</a>"
-msgstr ""
+msgstr "Genom att ändra inställningarna här kan du styra inmatning och visning av specifika fälttyper. Standardformat för datum är en landsinställning. Se <a href=\"%1\">Administrera -> Landsinställningar -> Datumformat</a>."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
