--- a/po/mk/common-base.po
+++ b/po/mk/common-base.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-03-15 10:24+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Macedonian (http://www.transifex.com/civicrm/civicrm/language/mk/)\n"
 "MIME-Version: 1.0\n"
@@ -19231,7 +19231,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Campaign Status"
-msgstr ""
+msgstr "Кампања статус"
 
 #: xml/templates/civicrm_data.tpl
 msgid "CiviCRM Extensions"
