po: update po/fr_FR/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
+# elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Moyg <moygwp+transifex@gmail.com>, 2014
@@ -22,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-07 20:44+0000\n"
-"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
+"PO-Revision-Date: 2016-03-17 08:22+0000\n"
+"Last-Translator: elma dontovska <elmadont@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2143,11 +2144,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 %2s for %3 installments."
-msgstr ""
+msgstr "Je veux contribuer à hauteur de ce montant chaque %1 %2 pour %3 versements."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 for %2 installments."
-msgstr ""
+msgstr "Je veux contribuer à hauteur de ce montant chaque %1 pour %2 versements."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 %2s."
@@ -2391,16 +2392,16 @@ msgstr "Cette contribution récurrente sera automatiquement débitée tous les %
 msgid ""
 "This recurring contribution will be automatically processed every %1 for a "
 "total %2 installments (including this initial contribution)."
-msgstr ""
+msgstr "Cette contribution périodique sera automatiquement prélevée chaque %1 pour un total de %2 versements (dont cette contribution initiale)"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2s."
-msgstr ""
+msgstr "Cette contribution périodique sera automatiquement prélevée chaque %1 %2."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This recurring contribution will be automatically processed every %1."
-msgstr ""
+msgstr "Cette contribution périodique sera automatiquement prélevée chaque %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -3192,7 +3193,7 @@ msgid ""
 "href=\"%1\"><strong>Administer CiviCRM Profiles</strong></a> if you need to "
 "review, modify or create profiles (you can come back at any time to select "
 "or update the Profile(s) used for this page)."
-msgstr ""
+msgstr "Vous pouvez utiliser des profils CiviCRm existant pour votre page - OU créer un (des) profil(s) spécifique(s) pour les pages de contribution en ligne. Pour créer, modifier, consulter les profils, allez à <a href=\"%1\"><strong>Administrer profils CiviCRM</strong></a> (vous pouvez revenir, à tout moment, pour sélectionner ou mettre à jour le(s) profil(s) utilisé(s) pour cette page)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 msgid ""
@@ -4568,7 +4569,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recurring Installments?"
-msgstr ""
+msgstr "Prélèvements périodiques ?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Allow Partial Payment"
@@ -4807,23 +4808,23 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Receipts have been emailed to %1 contributions."
-msgstr ""
+msgstr "Les reçus ont été transmis par courriel aux %1 contributions"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Thank you for your contribution/s"
-msgstr ""
+msgstr "Merci pour votre contribution"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Please see attached"
-msgstr ""
+msgstr "Merci de voir le(s) document(s) attaché(s)"
 
 #: CRM/Contribute/Import/Form/MapField.php
 msgid "Missing required fields: Soft Credit"
-msgstr ""
+msgstr "Le champ obligatoire : Soft Credit, est manquant "
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No additional payments found for this %1 record"
-msgstr ""
+msgstr "Aucun paiement additionnel trouvé pour cet enregistrement %1"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "submit credit card payment"
@@ -4849,7 +4850,7 @@ msgstr "Envoyer un reçu automatiquement par courriel à %1?"
 msgid ""
 "Enter a message you want included at the beginning of the confirmation "
 "email."
-msgstr ""
+msgstr "Saisir le message que vous souhaitez insérer au début du courriel de confirmation."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Net value of the payment (Total Amount minus Fee)."
@@ -4859,7 +4860,7 @@ msgstr ""
 msgid ""
 "Click OK to save this payment record AND send a receipt to the contributor "
 "now"
-msgstr ""
+msgstr "Cliquez OK pour enregistrer ce paiement ET envoyer un reçu immédiat au contributeur"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 %2(s) for %3 installments."
@@ -4871,7 +4872,7 @@ msgstr "Je veux donner ce montant tous les %1 %2(s)."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Your recurring contribution will be processed automatically."
-msgstr ""
+msgstr "Votre contribution périodique sera prélevée automatiquement."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid ""
@@ -4882,7 +4883,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "You will receive an email receipt for each recurring contribution."
-msgstr ""
+msgstr "Vous recevrez un reçu par courriel lors de chaque prélèvement périodique."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -5100,7 +5101,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_recurring_edit_html.tpl
 msgid " for %1 installments"
-msgstr ""
+msgstr "pour %1 versement(s)"
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
@@ -5111,7 +5112,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid " for a total of %1 installment(s)"
-msgstr ""
+msgstr "pour un total de %1 versement(s)"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid ""
@@ -5253,7 +5254,7 @@ msgstr ""
 
 #: CRM/Contribute/Info.php
 msgid "Delete contributions"
-msgstr ""
+msgstr "Supprimer la (les) contribution(s)"
 
 #: CRM/Contribute/Task.php
 msgid "Print or Email Contribution Invoices"
@@ -5342,7 +5343,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Enter the FROM name to be used in receipt emails."
-msgstr ""
+msgstr "Entrez la valeur dans le champ FROM, à utiliser pour les courriels de reçu."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Email Address of Receipt Sender"
