po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-14 10:27+0000\n"
+"PO-Revision-Date: 2016-03-21 14:58+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -320,7 +320,7 @@ msgstr "Meddelandemallar"
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Message Title"
-msgstr "Meddelanderubrik"
+msgstr "Meddelandets namn"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
@@ -1395,7 +1395,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "You have selected \"Redirect to Database\". A test email can not be sent."
-msgstr ""
+msgstr "Du har valt att omdirigera utgående post till databasen. Det går inte att skicka något testmeddelande."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
@@ -1415,7 +1415,7 @@ msgstr "Dina %1 inställningar är riktiga. Ett testmeddelande har skickats till
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Sent"
-msgstr ""
+msgstr "E-post skickat"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Oops. Your %1 settings are incorrect. No test mail has been sent."
@@ -1933,7 +1933,7 @@ msgid ""
 "We recommend that you save a copy of the your customized Text and HTML "
 "message content to a text file before reverting so you can combine your "
 "changes with the system default messages as needed."
-msgstr ""
+msgstr "Vi rekommenderar att du spara en kopia på dina anpassade text- och HTML-meddelandemallar i textfiler innan du återställer till standardversionerna så att du kan granska och kombinera dina ändringar med ändringarna i standardmallarna om du behöver."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Edit this message template"
@@ -2386,7 +2386,7 @@ msgstr "Är du säker på att du vill ta bort denna meddelandemall?"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Descriptive title of message - used for template selection."
-msgstr ""
+msgstr "Beskrivande namn på meddelandemallen"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Subject for email message."
@@ -6412,15 +6412,15 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Days"
-msgstr ""
+msgstr "Dagar"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Months"
-msgstr ""
+msgstr "Månader"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Years"
-msgstr ""
+msgstr "År"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
@@ -6622,7 +6622,7 @@ msgstr "Läs om tillgängliga alternativ på <a %1>Customizing the Look and Feel
 msgid ""
 "Disabling this option will prevent CiviCRM from checking for important "
 "security updates. Are you sure?"
-msgstr ""
+msgstr "Om du avaktiverar denna funktion kommer CiviCRM inte att kunna kontrollera viktiga säkerhetsuppdateringar. Är du säker?"
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid ""
@@ -6723,7 +6723,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Results are displayed here."
-msgstr ""
+msgstr "Resultaten visas här."
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Other operators not available for this action."
