po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-14 10:29+0000\n"
+"PO-Revision-Date: 2016-03-21 14:29+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -6142,7 +6142,7 @@ msgstr ""
 
 #: CRM/Core/BAO/UFField.php CRM/UF/Form/Field.php
 msgid "Phone and Extension"
-msgstr ""
+msgstr "Telefonnummer och anknytning"
 
 #: CRM/Core/BAO/UFField.php
 msgid "Contribution Note"
@@ -6318,13 +6318,13 @@ msgstr ""
 msgid ""
 "There is no valid smtp server setting. Click <a href='%1'>Administer >> "
 "System Setting >> Outbound Email</a> to set the SMTP Server."
-msgstr ""
+msgstr "Det finns ingen SMTP-server angiven. Klicka på <a href=\"%1\">Administrera >> Systeminställningar >> Utgående e-post</a> för att ange SMTP-server."
 
 #: CRM/Core/Config.php
 msgid ""
 "There is no valid sendmail path setting. Click <a href='%1'>Administer >> "
 "System Setting >> Outbound Email</a> to set the sendmail server."
-msgstr ""
+msgstr "Det finns ingen sökväg till sendmail-programmet. Klicka <a href=\"%1\">Administrera >> Systeminställningar >> Utgående e-post</a> för att ange det."
 
 #: CRM/Core/Config.php
 msgid ""
@@ -6957,7 +6957,7 @@ msgstr "modul"
 
 #: CRM/Core/DAO/Extension.php
 msgid "sms"
-msgstr ""
+msgstr "SMS"
 
 #: CRM/Core/DAO/File.php
 msgid "Mime Type"
@@ -7811,11 +7811,11 @@ msgstr ""
 msgid ""
 "Warning: Debug is enabled in <a href=\"%1\">system settings</a>. This should"
 " not be enabled on production servers."
-msgstr ""
+msgstr "Varning: Felsökning har aktiverats i <a href=\"%1\">systeminställningarna</a>. Detta bör bara användas på installationer som används för utveckling."
 
 #: CRM/Core/Page.php
 msgid "Debug Mode"
-msgstr ""
+msgstr "Felsökningsläge"
 
 #: CRM/Core/Payment/AuthorizeNet.php
 msgid "Authorize.net"
@@ -8505,7 +8505,7 @@ msgstr "Komplettera automatiskt"
 
 #: CRM/Core/SelectValues.php
 msgid "Single-line input field (text or numeric)"
-msgstr ""
+msgstr "Enradsfält för inmatning av text eller tal."
 
 #: CRM/Core/SelectValues.php
 msgid "Multi-line text box (textarea)"
@@ -8905,7 +8905,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "QR code"
-msgstr ""
+msgstr "QR-kod"
 
 #: CRM/Core/ShowHideBlocks.php templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
@@ -9116,7 +9116,7 @@ msgstr "Sök efter intervall?"
 
 #: CRM/Custom/Form/Field.php
 msgid "Custom field '%1' already exists in Database."
-msgstr ""
+msgstr "Det anpassade fältet '%1' finns redan i databasen."
 
 #: CRM/Custom/Form/Field.php
 msgid "Field's Name should not start with digit"
@@ -9239,7 +9239,7 @@ msgstr "Förhandsgranska %1"
 
 #: CRM/Custom/Form/Group.php
 msgid "New Custom Field Set"
-msgstr ""
+msgstr "Ny anpassad fältuppsättning"
 
 #: CRM/Custom/Form/Group.php
 msgid "Custom group '%1' already exists in Database."
@@ -9253,7 +9253,7 @@ msgstr "Kan inte kombinera andra alternativ med 'NÅGON'"
 msgid ""
 "You need to select the type of record that this set of custom fields is "
 "applicable for."
-msgstr ""
+msgstr "Du måste ange vilken typ av post som fältuppsättningen ska användas till."
 
 #: CRM/Custom/Form/Group.php
 msgid "Display Style should be Inline for this Class"
@@ -9298,7 +9298,7 @@ msgstr ""
 
 #: CRM/Custom/Form/Group.php
 msgid "Does this Custom Field Set allow multiple records?"
-msgstr ""
+msgstr "Ska den här anpassade fältuppsättningen tillåta multipla poster?"
 
 #: CRM/Custom/Form/Group.php
 msgid "Maximum number of multiple records"
@@ -16267,7 +16267,7 @@ msgstr "Använd anpassade fältgrupper för att lägga till sammanhörande fält
 
 #: templates/CRM/Custom/Form/Group.tpl
 msgid "Custom Fields for this Set"
-msgstr ""
+msgstr "Anpassade fält för denna fältuppsättning"
 
 #: templates/CRM/Custom/Form/MoveField.tpl
 msgid "Select a different Custom Data Set for this field."
