po: update po/sv_SE/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/case.po
+++ b/po/sv_SE/case.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 14:56+0000\n"
+"PO-Revision-Date: 2016-03-21 13:50+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -192,7 +192,7 @@ msgstr "Ärendets startdatum ändrats."
 
 #: CRM/Case/Form/Activity/ChangeCaseStatus.php
 msgid "Case status changed from %1 to %2"
-msgstr "Ärendets status ändrast från %1 till %2"
+msgstr "Ärendets status ändrades från %1 till %2"
 
 #: CRM/Case/Form/Activity/ChangeCaseStatus.php
 msgid "Case Status changed successfully."
@@ -1110,7 +1110,7 @@ msgstr "Hänvisning till dagvård för vuxna"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Arranging adult day care for senior individuals"
-msgstr ""
+msgstr "Ordna daglig omsorg för åldringar"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Medical evaluation"
@@ -1122,15 +1122,15 @@ msgstr "Bedömning av den mentala hälsan"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Secure temporary housing"
-msgstr ""
+msgstr "Tillhandahålla interimsboende"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Income and benefits stabilization"
-msgstr ""
+msgstr "Inkomst- och bidragsgenomgång"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Long-term housing plan"
-msgstr ""
+msgstr "Planering av långsiktigt boende"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "ADC referral"
@@ -1214,7 +1214,7 @@ msgstr "Visa åtgärder"
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
-msgstr ""
+msgstr "Vill du <a href=\"%1\">redigera den existerande åtgärden</a>?"
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
@@ -1258,7 +1258,7 @@ msgstr "titta i mina fall och aktiviteter"
 
 #: CRM/Case/Info.php
 msgid "access all cases and activities"
-msgstr ""
+msgstr "åtkomst till samtliga ärenden och åtgärder"
 
 #: CRM/Case/Info.php
 msgid "add cases"
