po: update po/sv_SE/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -9,12 +9,12 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 10:34+0000\n"
+"PO-Revision-Date: 2016-03-21 12:38+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1509,11 +1509,11 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Email"
-msgstr ""
+msgstr "Utskick från e-post"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Track Mailing?"
-msgstr ""
+msgstr "Spåra utskick?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Completed"
@@ -1529,11 +1529,11 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Approved By"
-msgstr ""
+msgstr "Godkänt av"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Is Mailing Archived?"
-msgstr ""
+msgstr "Är utskicket arkiverat?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Campaign"
