po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -19,14 +19,15 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
 # Vincent <vincent.primault@gmail.com>, 2011
+# William Blondel <william.blondel@gmx.fr>, 2016
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 # Yohann NICOLAS <yalh76@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-16 20:39+0000\n"
-"Last-Translator: elma dontovska <elmadont@gmail.com>\n"
+"PO-Revision-Date: 2016-03-27 21:47+0000\n"
+"Last-Translator: William Blondel <william.blondel@gmx.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6273,7 +6274,7 @@ msgstr "Exécuter"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "The result of api calls are displayed in this area."
-msgstr ""
+msgstr "Le résultat des requêtes API sont affichées ici."
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Parameter"
@@ -6311,7 +6312,7 @@ msgstr "Ajouter un type d'adresse"
 
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid "System Workflow Message Templates"
-msgstr ""
+msgstr "Modèles de messages de processus système"
 
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid ""
@@ -6328,7 +6329,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "No Scheduled Reminders have been created."
-msgstr ""
+msgstr "Aucun rappel programmé n'a été créé."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
@@ -6400,7 +6401,7 @@ msgstr "Paramètres du composant CiviContribute"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
-msgstr ""
+msgstr "Préfixe facture"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for invoice"
